--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '0.1.0'
+version = '1.0.0'
 group = 'dev.xkmc.l2backpack' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'l2backpack'
 
@@ -116,7 +116,7 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf('dev.xkmc.l2library:l2library:0.2.1')
+    implementation fg.deobf('dev.xkmc.l2library:l2library:1.0.0')
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
 
@@ -154,4 +154,8 @@ publishing {
             url "file://${project.projectDir}/mcmodsrepo"
         }
     }
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
