--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.daemon=false
 
 
 # mod version info
-minecraft_version = 1.18.2
-forge_version = 40.1.51
+minecraft_version = 1.19
+forge_version = 41.0.38
 
 # build dependency versions
 forgegradle_version = 5.1.+
@@ -15,5 +15,5 @@ mixin_version = 0.8.5
 shadow_version = 7.1.0
 
 # dependency versions
-jei_minecraft_version = 1.18.2
-jei_version = 9.7.0.193
+jei_minecraft_version = 1.19-forge
+jei_version = 11.0.0.206
