--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.daemon=false
 
 
 # mod version info
+ll_version = 1.1.3
 minecraft_version = 1.19
 forge_version = 41.0.98
 
@@ -17,3 +18,6 @@ shadow_version = 7.1.0
 # dependency versions
 jei_minecraft_version = 1.19-forge
 jei_version = 11.0.0.211
+curios_version = 1.19-5.1.0.4
+
+l2library_version = 1.5.1
