--- a/build.gradle
+++ b/build.gradle
@@ -129,8 +129,8 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
 
     implementation fg.deobf("dev.xkmc.l2library:l2library:${l2library_version}")
-    runtimeOnly fg.deobf('dev.xkmc.l2archery:l2archery:0.1.1')
-    runtimeOnly fg.deobf('dev.xkmc.l2artifacts:l2artifacts:1.1.2')
+    //runtimeOnly fg.deobf('dev.xkmc.l2archery:l2archery:0.1.1')
+    //runtimeOnly fg.deobf('dev.xkmc.l2artifacts:l2artifacts:1.1.2')
 
     implementation fg.deobf("mezz.jei:jei-${jei_minecraft_version}:${jei_version}")
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:${curios_version}")
