--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ org.gradle.daemon=false
 
 
 # mod version info
-ll_version = 1.4.0
-minecraft_version = 1.19.1
-forge_version = 42.0.1
+ll_version = 0.2.0
+minecraft_version = 1.18.2
+forge_version = 40.1.68
 
 # build dependency versions
 forgegradle_version = 5.1.+
@@ -16,8 +16,8 @@ mixin_version = 0.8.5
 shadow_version = 7.1.0
 
 # dependency versions
-jei_minecraft_version = 1.19.1-forge
-jei_version = 11.2.0.241
-curios_version = 1.19.1-5.1.0.5
+jei_minecraft_version = 1.18.2
+jei_version = 9.7.0.193
+curios_version = 1.18.2-5.0.7.1
 
-l2library_version = 1.7.0
+l2library_version = 0.2.2
