--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,9 @@ mixin_version = 0.8.5
 shadow_version = 7.1.0
 
 # dependency versions
+registrate_version = MC1.19.3-1.1.9
 jei_minecraft_version = 1.19.3-forge
 jei_version = 12.0.2.9999
 curios_version = 1.19.3-5.1.2.0
 
-l2library_version = 2.0.0
+l2library_version = 2.0.2
