--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -29,3 +29,9 @@ Also have some specialized bag for equipments, enchant books, and arrows.
     mandatory=true
     versionRange="[1.9.1,)"
     ordering="AFTER"
+[[dependencies.l2backpack]]
+    modId="modulargolems"
+    mandatory=false
+    versionRange="[1.7.3,)"
+    ordering="AFTER"
+    side="BOTH"
