--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,7 @@ dependencies {
 
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     implementation fg.deobf("dev.xkmc.l2library:l2library:${l2library_version}-slim")
+    implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.1.1')
     //runtimeOnly fg.deobf('dev.xkmc.l2complements:l2complements:0.3.3')
     //runtimeOnly fg.deobf('dev.xkmc.l2archery:l2archery:0.4.4')
     //runtimeOnly fg.deobf('dev.xkmc.l2artifacts:l2artifacts:1.1.2')
