--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 version = "${ll_version}"
 group = 'dev.xkmc.l2backpack' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'l2backpack'
+jarJar.enable()
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -137,8 +138,14 @@ dependencies {
 
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     implementation fg.deobf("dev.xkmc.l2library:l2library:${l2library_version}-slim")
-    implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.1.1')
-    //runtimeOnly fg.deobf('dev.xkmc.l2complements:l2complements:0.3.3')
+    implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.0.0")
+    implementation(jarJar("dev.xkmc.l2modularblock:l2modularblock:1.0.0")) {
+        transitive = false
+        jarJar.ranged(it, "[1.0.0,)")
+    }
+
+    implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre0')
+    runtimeOnly fg.deobf('dev.xkmc.l2complements:l2complements:2.2.0.pre0')
     //runtimeOnly fg.deobf('dev.xkmc.l2archery:l2archery:0.4.4')
     //runtimeOnly fg.deobf('dev.xkmc.l2artifacts:l2artifacts:1.1.2')
 
@@ -168,6 +175,11 @@ jar {
     }
 }
 
+
+reobf {
+    jarJar {}
+}
+
 // Example configuration to allow publishing using the maven-publish plugin
 // This is the preferred method to reobfuscate your jar file
 jar.finalizedBy('reobfJar')
@@ -187,6 +199,19 @@ publishing {
     }
 }
 
+tasks.jarJar.finalizedBy('reobfJarJar')
+
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
+}
+
+tasks.jarJar.configure {
+    // remove '-all' from jarJar jar file
+    classifier ''
+}
+
+jar {
+    // this now conflicts with jarJar as filenames are the same
+    // append a `-slim` to this jar, as this jar contains no pre-packaged libs
+    classifier 'slim'
 }
