--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 
 # mod version info
-ll_version = 2.1.3
+ll_version = 2.2.0.pre0
 minecraft_version = 1.19.4
 forge_version = 45.0.50
 
@@ -21,4 +21,4 @@ jei_minecraft_version = 1.19.4-forge
 jei_version = 13.1.0.7
 curios_version = 1.19.4-5.1.5.2
 
-l2library_version = 2.1.4.5
+l2library_version = 2.2.0.pre0
