--- a/build.gradle
+++ b/build.gradle
@@ -139,10 +139,10 @@ dependencies {
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     implementation fg.deobf("dev.xkmc.l2library:l2library:${l2library_version}-slim")
     implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.0.0")
-    implementation fg.deobf(jarJar("dev.xkmc.l2modularblock:l2modularblock:1.0.0")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2modularblock:l2modularblock:1.0.0") {
         transitive = false
         jarJar.ranged(it, "[1.0.0,)")
-    }
+    })
 
     implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre0')
     runtimeOnly fg.deobf('dev.xkmc.l2complements:l2complements:2.2.0.pre0')
