--- a/gradle.properties
+++ b/gradle.properties
@@ -5,20 +5,20 @@ org.gradle.daemon=false
 
 
 # mod version info
-ll_version = 2.3.2
-minecraft_version = 1.19.4
-forge_version = 45.0.50
+ll_version = 2.4.0-a0
+minecraft_version = 1.20
+forge_version = 46.0.14
 
 # build dependency versions
 forgegradle_version = 5.1.+
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
-mixin_extras_version = 0.2.0-beta.6
+mixin_extras_version = 0.2.0-beta.8
 
 # dependency versions
-registrate_version = MC1.19.4-1.2.14
-jei_minecraft_version = 1.19.4-forge
-jei_version = 13.1.0.7
-curios_version = 1.19.4-5.1.5.2
+registrate_version = MC1.20-1.3.1
+jei_minecraft_version = 1.20-forge
+jei_version = 14.0.0.4
+curios_version = 5.2.0-beta.2+1.20
 
-l2library_version = 2.3.1.pre0
+l2library_version = 2.4.0-a2
