--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[42,)"
+loaderVersion="[46,)"
 license="LGPL v2.1"
 [[mods]]
 modId="l2backpack"
@@ -15,17 +15,17 @@ Also have some specialized bag for equipments, enchant books, and arrows.
 [[dependencies.l2backpack]]
     modId="forge"
     mandatory=true
-    versionRange="[45.0.0,)"
+    versionRange="[46.0.0,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.l2backpack]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.19.4,1.20)"
+    versionRange="[1.20,1.21)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.l2backpack]]
     modId="l2library"
     mandatory=true
-    versionRange="[2.3.0,)"
+    versionRange="[2.4.0-a0,)"
     ordering="AFTER"
