--- a/build.gradle
+++ b/build.gradle
@@ -3,20 +3,18 @@ buildscript {
         maven { url = 'https://maven.minecraftforge.net' }
         mavenCentral()
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
-        maven { url = 'https://maven.parchmentmc.org' }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
         classpath "org.spongepowered:mixingradle:${mixingradle_version}"
-        classpath 'org.parchmentmc:librarian:1.+'
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'eclipse'
+plugins {
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+}
+
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
 
 version = "${ll_version}"
 group = 'dev.xkmc.l2backpack' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -215,11 +213,11 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.jarJar.configure {
     // remove '-all' from jarJar jar file
-    classifier ''
+    archiveClassifier.set('')
 }
 
 jar {
     // this now conflicts with jarJar as filenames are the same
     // append a `-slim` to this jar, as this jar contains no pre-packaged libs
-    classifier 'slim'
+    archiveClassifier.set('slim')
 }
