--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,20 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-
-# mod version info
-ll_version = 2.4.0-a0
-minecraft_version = 1.20
-forge_version = 46.0.14
-
-# build dependency versions
-forgegradle_version = 5.1.+
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
-mixin_extras_version = 0.2.0-beta.8
 
-# dependency versions
+minecraft_version = 1.20
+forge_version = 46.0.14
+mixin_extras_version = 0.2.0-beta.8
 registrate_version = MC1.20-1.3.1
 jei_minecraft_version = 1.20-forge
 jei_version = 14.0.0.4
 curios_version = 5.2.0-beta.2+1.20
 
-l2library_version = 2.4.0-a7
+modid = l2backpack
+ll_version = 2.4.0-a1
+lljij = true
+rootMod = false
+
+l2library_version = 2.4.0
