--- a/build.gradle
+++ b/build.gradle
@@ -179,7 +179,7 @@ repositories {
 dependencies {
     implementation fg.deobf("dev.xkmc.l2library:l2library:${l2library_version}-slim")
     implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.2.0")
-    implementation fg.deobf("dev.xkmc.l2tabs:l2tabs:0.1.0")
+    implementation fg.deobf("dev.xkmc.l2tabs:l2tabs:0.1.1")
     implementation fg.deobf("dev.xkmc.l2screentracker:l2screentracker:0.1.0")
     implementation fg.deobf(jarJar("dev.xkmc.l2modularblock:l2modularblock:1.1.0") {
         transitive = false
@@ -191,8 +191,9 @@ dependencies {
         jarJar.ranged(it, "[0.1.0,)")
     })
 
-    //implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.2.0.pre3')
-    //runtimeOnly fg.deobf('dev.xkmc.l2complements:l2complements:2.2.0.pre0')
+    implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.0-slim')
+    runtimeOnly fg.deobf("dev.xkmc.l2damagetracker:l2damagetracker:0.1.0")
+    runtimeOnly fg.deobf('dev.xkmc.l2complements:l2complements:2.4.0-slim')
     //runtimeOnly fg.deobf('dev.xkmc.l2archery:l2archery:2.2.0.pre0')
     //runtimeOnly fg.deobf('dev.xkmc.l2weaponry:l2weaponry:2.2.0.pre0')
     //runtimeOnly fg.deobf('dev.xkmc.l2artifacts:l2artifacts:2.2.0.pre3')
