--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ version = "${ll_version}"
 group = "dev.kxmc.${modid}"
 archivesBaseName = "${modid}"
 
-if (lljij) jarJar.enable()
+if (lljij.toBoolean()) jarJar.enable()
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -115,7 +115,7 @@ tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
-if (lljij) {
+if (lljij.toBoolean()) {
 
     reobf {
         jarJar {}
@@ -135,7 +135,7 @@ if (lljij) {
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     compileOnly(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-common:${mixin_extras_version}"))
-    if (rootMod) {
+    if (rootMod.toBoolean()) {
         implementation(jarJar("com.github.llamalad7.mixinextras:mixinextras-forge:${mixin_extras_version}")) {
             transitive = false
             jarJar.ranged(it, "[${mixin_extras_version},)")
@@ -145,7 +145,7 @@ dependencies {
     }
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
-    if (rootMod) {
+    if (rootMod.toBoolean()) {
         jarJar(group: 'com.tterrag.registrate', name: 'Registrate', version: "[MC1.20,MC1.21)")
     }
 }
@@ -186,9 +186,9 @@ dependencies {
         jarJar.ranged(it, "[1.1.0,)")
     })
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2itemselector:l2itemselector:0.1.0") {
+    implementation fg.deobf(jarJar("dev.xkmc.l2itemselector:l2itemselector:0.1.1") {
         transitive = false
-        jarJar.ranged(it, "[0.1.0,)")
+        jarJar.ranged(it, "[0.1.1,)")
     })
 
     implementation fg.deobf('dev.xkmc.modulargolems:modulargolems:2.4.0-slim')
