--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ jei_version = 14.0.0.4
 curios_version = 5.2.0-beta.2+1.20
 
 modid = l2backpack
-ll_version = 2.4.0-a1
+ll_version = 2.4.1
 lljij = true
 rootMod = false
 
