--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -27,5 +27,5 @@ Also have some specialized bag for equipments, enchant books, and arrows.
 [[dependencies.l2backpack]]
     modId="l2library"
     mandatory=true
-    versionRange="[2.4.0-a0,)"
+    versionRange="[2.4.0,)"
     ordering="AFTER"
