--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.daemon=false
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
 
-minecraft_version = 1.20
-forge_version = 46.0.14
+minecraft_version = 1.20.1
+forge_version = 47.1.3
 mixin_extras_version = 0.2.0-beta.8
-registrate_version = MC1.20-1.3.2
-jei_minecraft_version = 1.20-forge
-jei_version = 14.0.0.4
-curios_version = 5.2.0-beta.2+1.20
+registrate_version = MC1.20-1.3.11
+jei_minecraft_version = 1.20.1-forge
+jei_version = 15.2.0.27
+curios_version = 5.3.4+1.20.1
 
 modid = l2backpack
-ll_version = 2.4.10
+ll_version = 2.4.11-pre3
 lljij = true
 rootMod = false
 
-l2library_version = 2.4.14
+l2library_version = 2.4.17
