--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ jei_version = 15.2.0.27
 curios_version = 5.3.4+1.20.1
 
 modid = l2backpack
-ll_version = 2.4.15-pre5
+ll_version = 2.4.15
 lljij = true
 rootMod = false
 
-l2library_version = 2.4.21+build.3
+l2library_version = 2.4.21
