--- a/build.gradle
+++ b/build.gradle
@@ -180,7 +180,11 @@ dependencies {
     implementation fg.deobf("dev.xkmc.l2library:l2library:${l2library_version}-slim")
     implementation fg.deobf("dev.xkmc.l2serial:l2serial:1.2.0")
     implementation fg.deobf("dev.xkmc.l2tabs:l2tabs:0.1.5")
-    implementation fg.deobf("dev.xkmc.l2screentracker:l2screentracker:0.1.3")
+    implementation fg.deobf(jarJar("dev.xkmc.l2screentracker:l2screentracker:0.1.4") {
+        transitive = false
+        jarJar.ranged(it, "[0.1.4,)")
+    })
+
     implementation fg.deobf(jarJar("dev.xkmc.l2modularblock:l2modularblock:1.1.0") {
         transitive = false
         jarJar.ranged(it, "[1.1.0,)")
